--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "copy-project-structure",
-  "displayName": "copy-project-structure",
-  "description": "copy the project tructure at your clipboard",
-  "version": "0.0.1",
+  "name": "copy-project-context",
+  "displayName": "copy-project-context",
+  "description": "Adds a new option button to copy the proyect structure to your clipboard",
+  "version": "1.0.1",
   "engines": {
     "vscode": "^1.95.0"
   },
@@ -17,33 +17,53 @@
     "menus": {
       "explorer/context": [
         {
-          "command": "copy-project-structure.copy-project-structure",
+          "command": "copy-project-context.copy-project-context",
           "when": "workspaceFolderCount > 0",
           "group": "6_copypath"
+        },
+        {
+          "command": "copy-project-context.addfilePathToContext",
+          "when": "!explorerResourceIsFolder",
+          "group": "6_copypath"
+        },
+        {
+          "command": "copy-project-context.deleteFilePathsOfContext",
+          "when": "workspaceFolderCount > 0",
+          "group": "7_modification"
+        },
+        {
+          "command": "copy-project-context.showAllFilePathsFromContext",
+          "when": "workspaceFolderCount > 0",
+          "group": "7_modification"
         }
       ]
     },
     "configuration": {
-      "title": "Copy ProJect Structure",
+      "title": "Copy ProJect Context",
       "properties": {
-        "copy-project-structure.ignoreFilesOnAllFolders": {
+        "copy-project-context.ignoreFilesOnAllFolders": {
           "type": "array",
           "default": [
             ".git"
           ],
           "description": "List of folders and files to ignore in all folders"
         },
-        "copy-project-structure.ignoreFilesOnWorkspaceFolder": {
+        "copy-project-context.filePathsToContext": {
+          "type": "array",
+          "default": [],
+          "description": "List of file paths to copy the file content into the clipboard as additional context"
+        },
+        "copy-project-context.ignoreFilesOnWorkspaceFolder": {
           "type": "array",
           "default": [],
           "description": "List of folders and files to ignore in the main Workspace Folder\nNOTE: If you have multiple workspaces, this configuration will affect each workspace folder"
         },
-        "copy-project-structure.ignoreFilesOnSubFolders": {
+        "copy-project-context.ignoreFilesOnSubFolders": {
           "type": "array",
           "default": [],
           "description": "List of folders and files to ignore in the subfolders"
         },
-        "copy-project-structure.maxNumberOfItemsPerFolder": {
+        "copy-project-context.maxNumberOfItemsPerFolder": {
           "type": "integer",
           "default": 30,
           "description": "Maximum number of items (folders and files) to show in a folder"
@@ -52,8 +72,20 @@
     },
     "commands": [
       {
-        "command": "copy-project-structure.copy-project-structure",
-        "title": "Copy Project Structure"
+        "command": "copy-project-context.copy-project-context",
+        "title": "Copy Project Context"
+      },
+      {
+        "command": "copy-project-context.addfilePathToContext",
+        "title": "Add File Content to Proyect Context"
+      },
+      {
+        "command": "copy-project-context.deleteFilePathsOfContext",
+        "title": "Delete All Files From Proyect Context"
+      },
+      {
+        "command": "copy-project-context.showAllFilePathsFromContext",
+        "title": "Show all Files Added to the Project Context"
       }
     ]
   },
