--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "copy-project-context",
-  "displayName": "copy-project-context",
-  "description": "Adds a new option button to copy the proyect structure to your clipboard, perfect for gibing the proyect context to your favorite IA",
+  "displayName": "Copy Project Context",
+  "description": "A easy tool for vs code that allows you to copy your project structure and files in a fast way to use as context for asking to your favorite IA model or anything else.",
   "version": "1.0.2",
   "engines": {
     "vscode": "^1.95.0"
